--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=sb-ecom
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:e400f84c-a831-4524-9943-4ec661773565
